--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -172,7 +172,7 @@
 #menu li a {
   padding: 15px 8px 15px 15px;
   border-bottom: none;
-  color: #fff; }
+  color: #000000; }
 
 #menu li ul li a {
   padding: 10px 8px 10px 30px; }
