--- a/public/assets/css/skins/black_skin.css
+++ b/public/assets/css/skins/black_skin.css
@@ -40,7 +40,7 @@ background-color: #777;
 	border-bottom: none;
 }
 #menu li a {
-	color: #fff;
+	color: #000000;
 }
 #menu ul {
 	background: #7a7a7a;
